scrambler/syntax/ha_parser.output
Terminals unused in grammar

   program
   extdeflist
   extdef
   extdeclist
   specification
   structspecification
   opttag
   tag
   vardec
   fundec
   varlist
   paramdec
   compst
   stmtlist
   stmt
   deflist
   def
   declist
   decl
   expr
   args
   SPACE
   AERROR
   EOL


State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specification ExtDecList SEMI
    5       | Specification SEMI
    6       | Specification FunDec Compst

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specification: TYPE
   10              | StructSpecification

   11 StructSpecification: STRUCT OptTag LC DefList RC
   12                    | STRUCT Tag

   13 OptTag: ID
   14       | /* empty */

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INTEGER_TYPE RB

   18 FunDec: ID LPB VarList RPB
   19       | ID LPB RPB

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specification VarDec

   23 Compst: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | /* empty */

   26 Stmt: Exp SEMI
   27     | Compst
   28     | RETURN Exp SEMI
   29     | IF LPB Exp RPB Stmt
   30     | IF LPB Exp RPB Stmt ELSE Stmt
   31     | WHILE LPB Exp RPB Stmt

   32 DefList: Def DefList
   33        | /* empty */

   34 Def: Specification DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LPB Exp RPB
   48    | MINUS Exp
   49    | NOT Exp
   50    | ID LPB Args RPB
   51    | ID LPB RPB
   52    | Exp LB Exp RB
   53    | Exp DOT ID
   54    | ID
   55    | INTEGER_TYPE
   56    | FLOAT_TYPE

   57 Args: Exp COMMA Args
   58     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
program (258)
extdeflist (259)
extdef (260)
extdeclist (261)
specification (262)
structspecification (263)
opttag (264)
tag (265)
vardec (266)
fundec (267)
varlist (268)
paramdec (269)
compst (270)
stmtlist (271)
stmt (272)
deflist (273)
def (274)
declist (275)
decl (276)
expr (277)
args (278)
INTEGER_TYPE (279) 17 55
FLOAT_TYPE (280) 56
TYPE (281) 9
STRUCT (282) 11 12
RETURN (283) 28
IF (284) 29 30
ELSE (285) 30
WHILE (286) 31
ID (287) 13 15 16 18 19 50 51 53 54
SPACE (288)
SEMI (289) 4 5 26 28 34
COMMA (290) 8 20 36 57
ASSIGNOP (291) 38 39
RELOP (292) 42
PLUS (293) 43
MINUS (294) 44 48
STAR (295) 45
DIV (296) 46
AND (297) 40
OR (298) 41
DOT (299) 53
NOT (300) 49
LPB (301) 18 19 29 30 31 47 50 51
RPB (302) 18 19 29 30 31 47 50 51
LB (303) 17 52
RB (304) 17 52
LC (305) 11 23
RC (306) 11 23
AERROR (307)
EOL (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1, on right: 0
ExtDefList (56)
    on left: 2 3, on right: 1 2
ExtDef (57)
    on left: 4 5 6, on right: 2
ExtDecList (58)
    on left: 7 8, on right: 4 8
Specification (59)
    on left: 9 10, on right: 4 5 6 22 34
StructSpecification (60)
    on left: 11 12, on right: 10
OptTag (61)
    on left: 13 14, on right: 11
Tag (62)
    on left: 15, on right: 12
VarDec (63)
    on left: 16 17, on right: 7 8 17 22 37 38
FunDec (64)
    on left: 18 19, on right: 6
VarList (65)
    on left: 20 21, on right: 18 20
ParamDec (66)
    on left: 22, on right: 20 21
Compst (67)
    on left: 23, on right: 6 27
StmtList (68)
    on left: 24 25, on right: 23 24
Stmt (69)
    on left: 26 27 28 29 30 31, on right: 24 29 30 31
DefList (70)
    on left: 32 33, on right: 11 23 32
Def (71)
    on left: 34, on right: 32
DecList (72)
    on left: 35 36, on right: 34 36
Dec (73)
    on left: 37 38, on right: 35 36
Exp (74)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56,
    on right: 26 28 29 30 31 38 39 40 41 42 43 44 45 46 47 48 49 52
    53 57 58
Args (75)
    on left: 57 58, on right: 50 57


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program              go to state 3
    ExtDefList           go to state 4
    ExtDef               go to state 5
    Specification        go to state 6
    StructSpecification  go to state 7


state 1

    9 Specification: TYPE .

    $default  reduce using rule 9 (Specification)


state 2

   11 StructSpecification: STRUCT . OptTag LC DefList RC
   12                    | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList           go to state 12
    ExtDef               go to state 5
    Specification        go to state 6
    StructSpecification  go to state 7


state 6

    4 ExtDef: Specification . ExtDecList SEMI
    5       | Specification . SEMI
    6       | Specification . FunDec Compst

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


state 7

   10 Specification: StructSpecification .

    $default  reduce using rule 10 (Specification)


state 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


state 9

   11 StructSpecification: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


state 10

   12 StructSpecification: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecification)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

   16 VarDec: ID .
   18 FunDec: ID . LPB VarList RPB
   19       | ID . LPB RPB

    LPB  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


state 14

    5 ExtDef: Specification SEMI .

    $default  reduce using rule 5 (ExtDef)


state 15

    4 ExtDef: Specification ExtDecList . SEMI

    SEMI  shift, and go to state 20


state 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INTEGER_TYPE RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


state 17

    6 ExtDef: Specification FunDec . Compst

    LC  shift, and go to state 23

    Compst  go to state 24


state 18

   11 StructSpecification: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specification        go to state 25
    StructSpecification  go to state 7
    DefList              go to state 26
    Def                  go to state 27


state 19

   18 FunDec: ID LPB . VarList RPB
   19       | ID LPB . RPB

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RPB     shift, and go to state 28

    Specification        go to state 29
    StructSpecification  go to state 7
    VarList              go to state 30
    ParamDec             go to state 31


state 20

    4 ExtDef: Specification ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  go to state 33
    VarDec      go to state 16


state 22

   17 VarDec: VarDec LB . INTEGER_TYPE RB

    INTEGER_TYPE  shift, and go to state 34


state 23

   23 Compst: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specification        go to state 25
    StructSpecification  go to state 7
    DefList              go to state 35
    Def                  go to state 27


state 24

    6 ExtDef: Specification FunDec Compst .

    $default  reduce using rule 6 (ExtDef)


state 25

   34 Def: Specification . DecList SEMI

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


state 26

   11 StructSpecification: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 39


state 27

   32 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specification        go to state 25
    StructSpecification  go to state 7
    DefList              go to state 40
    Def                  go to state 27


state 28

   19 FunDec: ID LPB RPB .

    $default  reduce using rule 19 (FunDec)


state 29

   22 ParamDec: Specification . VarDec

    ID  shift, and go to state 32

    VarDec  go to state 41


state 30

   18 FunDec: ID LPB VarList . RPB

    RPB  shift, and go to state 42


state 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 43

    $default  reduce using rule 21 (VarList)


state 32

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


state 33

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


state 34

   17 VarDec: VarDec LB INTEGER_TYPE . RB

    RB  shift, and go to state 44


state 35

   23 Compst: LC DefList . StmtList RC

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    RETURN        shift, and go to state 47
    IF            shift, and go to state 48
    WHILE         shift, and go to state 49
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53
    LC            shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    Compst    go to state 54
    StmtList  go to state 55
    Stmt      go to state 56
    Exp       go to state 57


state 36

   17 VarDec: VarDec . LB INTEGER_TYPE RB
   37 Dec: VarDec .
   38    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 58
    LB        shift, and go to state 22

    $default  reduce using rule 37 (Dec)


state 37

   34 Def: Specification DecList . SEMI

    SEMI  shift, and go to state 59


state 38

   35 DecList: Dec .
   36        | Dec . COMMA DecList

    COMMA  shift, and go to state 60

    $default  reduce using rule 35 (DecList)


state 39

   11 StructSpecification: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecification)


state 40

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


state 41

   17 VarDec: VarDec . LB INTEGER_TYPE RB
   22 ParamDec: Specification VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


state 42

   18 FunDec: ID LPB VarList RPB .

    $default  reduce using rule 18 (FunDec)


state 43

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specification        go to state 29
    StructSpecification  go to state 7
    VarList              go to state 61
    ParamDec             go to state 31


state 44

   17 VarDec: VarDec LB INTEGER_TYPE RB .

    $default  reduce using rule 17 (VarDec)


state 45

   55 Exp: INTEGER_TYPE .

    $default  reduce using rule 55 (Exp)


state 46

   56 Exp: FLOAT_TYPE .

    $default  reduce using rule 56 (Exp)


state 47

   28 Stmt: RETURN . Exp SEMI

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 62


state 48

   29 Stmt: IF . LPB Exp RPB Stmt
   30     | IF . LPB Exp RPB Stmt ELSE Stmt

    LPB  shift, and go to state 63


state 49

   31 Stmt: WHILE . LPB Exp RPB Stmt

    LPB  shift, and go to state 64


state 50

   50 Exp: ID . LPB Args RPB
   51    | ID . LPB RPB
   54    | ID .

    LPB  shift, and go to state 65

    $default  reduce using rule 54 (Exp)


state 51

   48 Exp: MINUS . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 66


state 52

   49 Exp: NOT . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 67


state 53

   47 Exp: LPB . Exp RPB

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 68


state 54

   27 Stmt: Compst .

    $default  reduce using rule 27 (Stmt)


state 55

   23 Compst: LC DefList StmtList . RC

    RC  shift, and go to state 69


state 56

   24 StmtList: Stmt . StmtList

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    RETURN        shift, and go to state 47
    IF            shift, and go to state 48
    WHILE         shift, and go to state 49
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53
    LC            shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    Compst    go to state 54
    StmtList  go to state 70
    Stmt      go to state 56
    Exp       go to state 57


state 57

   26 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    SEMI      shift, and go to state 71
    ASSIGNOP  shift, and go to state 72
    RELOP     shift, and go to state 73
    PLUS      shift, and go to state 74
    MINUS     shift, and go to state 75
    STAR      shift, and go to state 76
    DIV       shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79
    DOT       shift, and go to state 80
    LB        shift, and go to state 81


state 58

   38 Dec: VarDec ASSIGNOP . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 82


state 59

   34 Def: Specification DecList SEMI .

    $default  reduce using rule 34 (Def)


state 60

   36 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 83
    Dec      go to state 38


state 61

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


state 62

   28 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 72
    RELOP     shift, and go to state 73
    PLUS      shift, and go to state 74
    MINUS     shift, and go to state 75
    STAR      shift, and go to state 76
    DIV       shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79
    DOT       shift, and go to state 80
    LB        shift, and go to state 81


state 63

   29 Stmt: IF LPB . Exp RPB Stmt
   30     | IF LPB . Exp RPB Stmt ELSE Stmt

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 85


state 64

   31 Stmt: WHILE LPB . Exp RPB Stmt

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 86


state 65

   50 Exp: ID LPB . Args RPB
   51    | ID LPB . RPB

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53
    RPB           shift, and go to state 87

    Exp   go to state 88
    Args  go to state 89


state 66

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    STAR  shift, and go to state 76
    DIV   shift, and go to state 77
    DOT   shift, and go to state 80
    LB    shift, and go to state 81

    $default  reduce using rule 48 (Exp)


state 67

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | NOT Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    DOT  shift, and go to state 80
    LB   shift, and go to state 81

    $default  reduce using rule 49 (Exp)


state 68

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LPB Exp . RPB
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 72
    RELOP     shift, and go to state 73
    PLUS      shift, and go to state 74
    MINUS     shift, and go to state 75
    STAR      shift, and go to state 76
    DIV       shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79
    DOT       shift, and go to state 80
    RPB       shift, and go to state 90
    LB        shift, and go to state 81


state 69

   23 Compst: LC DefList StmtList RC .

    $default  reduce using rule 23 (Compst)


state 70

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


state 71

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


state 72

   39 Exp: Exp ASSIGNOP . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 91


state 73

   42 Exp: Exp RELOP . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 92


state 74

   43 Exp: Exp PLUS . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 93


state 75

   44 Exp: Exp MINUS . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 94


state 76

   45 Exp: Exp STAR . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 95


state 77

   46 Exp: Exp DIV . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 96


state 78

   40 Exp: Exp AND . Exp

    INTEGER_TYPE  shift, and go to state 45
    FLOAT_TYPE    shift, and go to state 46
    ID            shift, and go to state 50
    MINUS         shift, and go to state 51
    NOT           shift, and go to state 52
    LPB           shift, and go to state 53

    Exp  go to state 97


state 79

